// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItemGroup styles should render a ListItemGroup with a custom details line 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.circuit-1 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  margin: 0 16px;
}

.circuit-2 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  min-width: 0;
  margin-bottom: 8px;
}

.circuit-3 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 14px;
  line-height: 20px;
  margin-bottom: 0;
  max-width: 100%;
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.circuit-4 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-left: 16px;
  margin-bottom: 8px;
}

.circuit-5 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 14px;
  line-height: 20px;
  margin-bottom: 0;
}

.circuit-6 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 2px solid #E6E6E6;
  border-radius: 16px;
}

.circuit-7 {
  list-style: none;
}

.circuit-7:not(:first-of-type)>*>div:last-of-type {
  position: relative;
}

.circuit-7:not(:first-of-type)>*>div:last-of-type:before {
  content: '';
  position: absolute;
  top: -12px;
  left: 0;
  right: -16px;
  border-top: 1px solid #E6E6E6;
}

.circuit-8 {
  background-color: #FFF;
  color: #1A1A1A;
  border: 2px solid #E6E6E6;
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  margin: 0;
  width: 100%;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  border: none;
  border-radius: calc(16px - 2px);
}

.circuit-8:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-8:focus::-moz-focus-inner {
  border: 0;
}

.circuit-8:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-8:focus {
  border-color: transparent;
  z-index: 2;
}

.circuit-8:focus:not(:focus-visible) {
  border-color: #E6E6E6;
  z-index: auto;
}

.circuit-8:disabled,
.circuit-8[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-9 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
}

.circuit-10 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
}

.circuit-11 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 16px;
  line-height: 24px;
  margin-bottom: 0;
  max-width: 100%;
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<div
  class="circuit-0"
>
  <div
    class="circuit-1"
  >
    <div
      class="circuit-2"
    >
      <h4
        class="circuit-3"
      >
        Group label
      </h4>
    </div>
    <div
      class="circuit-4"
    >
      <p
        class="circuit-5"
      >
        Group details
      </p>
    </div>
  </div>
  <ul
    class="circuit-6"
  >
    <li
      class="circuit-7"
    >
      <div
        class="circuit-8"
      >
        <div
          class="circuit-9"
        >
          <div
            class="circuit-10"
          >
            <p
              class="circuit-11"
            >
              First item
            </p>
          </div>
        </div>
      </div>
    </li>
    <li
      class="circuit-7"
    >
      <div
        class="circuit-8"
      >
        <div
          class="circuit-9"
        >
          <div
            class="circuit-10"
          >
            <p
              class="circuit-11"
            >
              Second item
            </p>
          </div>
        </div>
      </div>
    </li>
    <li
      class="circuit-7"
    >
      <div
        class="circuit-8"
      >
        <div
          class="circuit-9"
        >
          <div
            class="circuit-10"
          >
            <p
              class="circuit-11"
            >
              Third item
            </p>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`ListItemGroup styles should render a ListItemGroup with a custom label 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.circuit-1 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  margin: 0 16px;
}

.circuit-2 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  min-width: 0;
  margin-bottom: 8px;
}

.circuit-3 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 14px;
  line-height: 20px;
  margin-bottom: 0;
}

.circuit-4 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 2px solid #E6E6E6;
  border-radius: 16px;
}

.circuit-5 {
  list-style: none;
}

.circuit-5:not(:first-of-type)>*>div:last-of-type {
  position: relative;
}

.circuit-5:not(:first-of-type)>*>div:last-of-type:before {
  content: '';
  position: absolute;
  top: -12px;
  left: 0;
  right: -16px;
  border-top: 1px solid #E6E6E6;
}

.circuit-6 {
  background-color: #FFF;
  color: #1A1A1A;
  border: 2px solid #E6E6E6;
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  margin: 0;
  width: 100%;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  border: none;
  border-radius: calc(16px - 2px);
}

.circuit-6:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-6:focus::-moz-focus-inner {
  border: 0;
}

.circuit-6:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-6:focus {
  border-color: transparent;
  z-index: 2;
}

.circuit-6:focus:not(:focus-visible) {
  border-color: #E6E6E6;
  z-index: auto;
}

.circuit-6:disabled,
.circuit-6[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-7 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
}

.circuit-8 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
}

.circuit-9 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 16px;
  line-height: 24px;
  margin-bottom: 0;
  max-width: 100%;
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<div
  class="circuit-0"
>
  <div
    class="circuit-1"
  >
    <div
      class="circuit-2"
    >
      <h4
        class="circuit-3"
      >
        Group label
      </h4>
    </div>
  </div>
  <ul
    class="circuit-4"
  >
    <li
      class="circuit-5"
    >
      <div
        class="circuit-6"
      >
        <div
          class="circuit-7"
        >
          <div
            class="circuit-8"
          >
            <p
              class="circuit-9"
            >
              First item
            </p>
          </div>
        </div>
      </div>
    </li>
    <li
      class="circuit-5"
    >
      <div
        class="circuit-6"
      >
        <div
          class="circuit-7"
        >
          <div
            class="circuit-8"
          >
            <p
              class="circuit-9"
            >
              Second item
            </p>
          </div>
        </div>
      </div>
    </li>
    <li
      class="circuit-5"
    >
      <div
        class="circuit-6"
      >
        <div
          class="circuit-7"
        >
          <div
            class="circuit-8"
          >
            <p
              class="circuit-9"
            >
              Third item
            </p>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`ListItemGroup styles should render a ListItemGroup with a details line 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.circuit-1 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  margin: 0 16px;
}

.circuit-2 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  min-width: 0;
  margin-bottom: 8px;
}

.circuit-3 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 14px;
  line-height: 20px;
  margin-bottom: 0;
  max-width: 100%;
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.circuit-4 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-left: 16px;
  margin-bottom: 8px;
}

.circuit-5 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 14px;
  line-height: 20px;
  margin-bottom: 0;
}

.circuit-6 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 2px solid #E6E6E6;
  border-radius: 16px;
}

.circuit-7 {
  list-style: none;
}

.circuit-7:not(:first-of-type)>*>div:last-of-type {
  position: relative;
}

.circuit-7:not(:first-of-type)>*>div:last-of-type:before {
  content: '';
  position: absolute;
  top: -12px;
  left: 0;
  right: -16px;
  border-top: 1px solid #E6E6E6;
}

.circuit-8 {
  background-color: #FFF;
  color: #1A1A1A;
  border: 2px solid #E6E6E6;
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  margin: 0;
  width: 100%;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  border: none;
  border-radius: calc(16px - 2px);
}

.circuit-8:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-8:focus::-moz-focus-inner {
  border: 0;
}

.circuit-8:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-8:focus {
  border-color: transparent;
  z-index: 2;
}

.circuit-8:focus:not(:focus-visible) {
  border-color: #E6E6E6;
  z-index: auto;
}

.circuit-8:disabled,
.circuit-8[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-9 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
}

.circuit-10 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
}

.circuit-11 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 16px;
  line-height: 24px;
  margin-bottom: 0;
  max-width: 100%;
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<div
  class="circuit-0"
>
  <div
    class="circuit-1"
  >
    <div
      class="circuit-2"
    >
      <h4
        class="circuit-3"
      >
        Group label
      </h4>
    </div>
    <div
      class="circuit-4"
    >
      <p
        class="circuit-5"
      >
        Group details
      </p>
    </div>
  </div>
  <ul
    class="circuit-6"
  >
    <li
      class="circuit-7"
    >
      <div
        class="circuit-8"
      >
        <div
          class="circuit-9"
        >
          <div
            class="circuit-10"
          >
            <p
              class="circuit-11"
            >
              First item
            </p>
          </div>
        </div>
      </div>
    </li>
    <li
      class="circuit-7"
    >
      <div
        class="circuit-8"
      >
        <div
          class="circuit-9"
        >
          <div
            class="circuit-10"
          >
            <p
              class="circuit-11"
            >
              Second item
            </p>
          </div>
        </div>
      </div>
    </li>
    <li
      class="circuit-7"
    >
      <div
        class="circuit-8"
      >
        <div
          class="circuit-9"
        >
          <div
            class="circuit-10"
          >
            <p
              class="circuit-11"
            >
              Third item
            </p>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`ListItemGroup styles should render a ListItemGroup with a hidden label 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.circuit-1 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  margin: 0 16px;
}

.circuit-2 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  min-width: 0;
  margin-bottom: 8px;
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-3 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 14px;
  line-height: 20px;
  margin-bottom: 0;
  max-width: 100%;
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.circuit-4 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 2px solid #E6E6E6;
  border-radius: 16px;
}

.circuit-5 {
  list-style: none;
}

.circuit-5:not(:first-of-type)>*>div:last-of-type {
  position: relative;
}

.circuit-5:not(:first-of-type)>*>div:last-of-type:before {
  content: '';
  position: absolute;
  top: -12px;
  left: 0;
  right: -16px;
  border-top: 1px solid #E6E6E6;
}

.circuit-6 {
  background-color: #FFF;
  color: #1A1A1A;
  border: 2px solid #E6E6E6;
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  margin: 0;
  width: 100%;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  border: none;
  border-radius: calc(16px - 2px);
}

.circuit-6:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-6:focus::-moz-focus-inner {
  border: 0;
}

.circuit-6:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-6:focus {
  border-color: transparent;
  z-index: 2;
}

.circuit-6:focus:not(:focus-visible) {
  border-color: #E6E6E6;
  z-index: auto;
}

.circuit-6:disabled,
.circuit-6[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-7 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
}

.circuit-8 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
}

.circuit-9 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 16px;
  line-height: 24px;
  margin-bottom: 0;
  max-width: 100%;
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<div
  class="circuit-0"
>
  <div
    class="circuit-1"
  >
    <div
      class="circuit-2"
    >
      <h4
        class="circuit-3"
      >
        Group label
      </h4>
    </div>
  </div>
  <ul
    class="circuit-4"
  >
    <li
      class="circuit-5"
    >
      <div
        class="circuit-6"
      >
        <div
          class="circuit-7"
        >
          <div
            class="circuit-8"
          >
            <p
              class="circuit-9"
            >
              First item
            </p>
          </div>
        </div>
      </div>
    </li>
    <li
      class="circuit-5"
    >
      <div
        class="circuit-6"
      >
        <div
          class="circuit-7"
        >
          <div
            class="circuit-8"
          >
            <p
              class="circuit-9"
            >
              Second item
            </p>
          </div>
        </div>
      </div>
    </li>
    <li
      class="circuit-5"
    >
      <div
        class="circuit-6"
      >
        <div
          class="circuit-7"
        >
          <div
            class="circuit-8"
          >
            <p
              class="circuit-9"
            >
              Third item
            </p>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`ListItemGroup styles should render a ListItemGroup with interactive items 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.circuit-1 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  margin: 0 16px;
}

.circuit-2 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  min-width: 0;
  margin-bottom: 8px;
}

.circuit-3 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 14px;
  line-height: 20px;
  margin-bottom: 0;
  max-width: 100%;
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.circuit-4 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 2px solid #E6E6E6;
  border-radius: 16px;
}

.circuit-5 {
  list-style: none;
}

.circuit-5:not(:first-of-type)>*>div:last-of-type {
  position: relative;
}

.circuit-5:not(:first-of-type)>*>div:last-of-type:before {
  content: '';
  position: absolute;
  top: -12px;
  left: 0;
  right: -16px;
  border-top: 1px solid #E6E6E6;
}

.circuit-5:hover:not(:first-of-type)>*>div:last-of-type:before,
.circuit-5:hover+li:not(:first-of-type)>*>div:last-of-type:before {
  border-top-width: 0;
}

.circuit-6 {
  background-color: #FFF;
  color: #1A1A1A;
  border: 2px solid #E6E6E6;
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  margin: 0;
  width: 100%;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  cursor: pointer;
  border: none;
  border-radius: calc(16px - 2px);
}

.circuit-6:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-6:focus::-moz-focus-inner {
  border: 0;
}

.circuit-6:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-6:focus {
  border-color: transparent;
  z-index: 2;
}

.circuit-6:focus:not(:focus-visible) {
  border-color: #E6E6E6;
  z-index: auto;
}

.circuit-6:disabled,
.circuit-6[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-6:hover {
  background-color: #F5F5F5;
}

.circuit-6:active {
  background-color: #E6E6E6;
  border-color: #E6E6E6;
}

.circuit-7 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
}

.circuit-8 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
}

.circuit-9 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 16px;
  line-height: 24px;
  margin-bottom: 0;
  max-width: 100%;
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<div>
  <div
    class="circuit-0"
  >
    <div
      class="circuit-1"
    >
      <div
        class="circuit-2"
      >
        <h4
          class="circuit-3"
        >
          Group label
        </h4>
      </div>
    </div>
    <ul
      class="circuit-4"
    >
      <li
        class="circuit-5"
      >
        <button
          class="circuit-6"
        >
          <div
            class="circuit-7"
          >
            <div
              class="circuit-8"
            >
              <p
                class="circuit-9"
              >
                First item
              </p>
            </div>
          </div>
        </button>
      </li>
      <li
        class="circuit-5"
      >
        <button
          class="circuit-6"
        >
          <div
            class="circuit-7"
          >
            <div
              class="circuit-8"
            >
              <p
                class="circuit-9"
              >
                Second item
              </p>
            </div>
          </div>
        </button>
      </li>
      <li
        class="circuit-5"
      >
        <button
          class="circuit-6"
        >
          <div
            class="circuit-7"
          >
            <div
              class="circuit-8"
            >
              <p
                class="circuit-9"
              >
                Third item
              </p>
            </div>
          </div>
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`ListItemGroup styles should render a plain variant ListItemGroup 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.circuit-1 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  margin: 0 16px;
  margin: 0 calc(16px - 2px);
}

.circuit-2 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  min-width: 0;
  margin-bottom: 8px;
}

.circuit-3 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 14px;
  line-height: 20px;
  margin-bottom: 0;
  max-width: 100%;
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.circuit-4 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 2px solid #E6E6E6;
  border-radius: 16px;
  border-width: 1px 0;
  border-radius: 0;
}

.circuit-5 {
  list-style: none;
}

.circuit-5:not(:first-of-type)>*>div:last-of-type {
  position: relative;
}

.circuit-5:not(:first-of-type)>*>div:last-of-type:before {
  content: '';
  position: absolute;
  top: -12px;
  left: 0;
  right: -16px;
  border-top: 1px solid #E6E6E6;
}

.circuit-6 {
  background-color: #FFF;
  color: #1A1A1A;
  border: 2px solid #E6E6E6;
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  margin: 0;
  width: 100%;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  border: none;
  border-radius: calc(16px - 2px);
}

.circuit-6:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-6:focus::-moz-focus-inner {
  border: 0;
}

.circuit-6:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-6:focus {
  border-color: transparent;
  z-index: 2;
}

.circuit-6:focus:not(:focus-visible) {
  border-color: #E6E6E6;
  z-index: auto;
}

.circuit-6:disabled,
.circuit-6[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-7 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
}

.circuit-8 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
}

.circuit-9 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 16px;
  line-height: 24px;
  margin-bottom: 0;
  max-width: 100%;
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<div
  class="circuit-0"
>
  <div
    class="circuit-1"
  >
    <div
      class="circuit-2"
    >
      <h4
        class="circuit-3"
      >
        Group label
      </h4>
    </div>
  </div>
  <ul
    class="circuit-4"
  >
    <li
      class="circuit-5"
    >
      <div
        class="circuit-6"
      >
        <div
          class="circuit-7"
        >
          <div
            class="circuit-8"
          >
            <p
              class="circuit-9"
            >
              First item
            </p>
          </div>
        </div>
      </div>
    </li>
    <li
      class="circuit-5"
    >
      <div
        class="circuit-6"
      >
        <div
          class="circuit-7"
        >
          <div
            class="circuit-8"
          >
            <p
              class="circuit-9"
            >
              Second item
            </p>
          </div>
        </div>
      </div>
    </li>
    <li
      class="circuit-5"
    >
      <div
        class="circuit-6"
      >
        <div
          class="circuit-7"
        >
          <div
            class="circuit-8"
          >
            <p
              class="circuit-9"
            >
              Third item
            </p>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`ListItemGroup styles should render the focused item in a ListItemGroup with interactive items 1`] = `
.circuit-0 {
  background-color: #FFF;
  color: #1A1A1A;
  border: 2px solid #E6E6E6;
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  margin: 0;
  width: 100%;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  cursor: pointer;
  border: none;
  border-radius: calc(16px - 2px);
}

.circuit-0:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-0:focus {
  border-color: transparent;
  z-index: 2;
}

.circuit-0:focus:not(:focus-visible) {
  border-color: #E6E6E6;
  z-index: auto;
}

.circuit-0:disabled,
.circuit-0[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-0:hover {
  background-color: #F5F5F5;
}

.circuit-0:active {
  background-color: #E6E6E6;
  border-color: #E6E6E6;
}

.circuit-1 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
}

.circuit-2 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
}

.circuit-3 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 16px;
  line-height: 24px;
  margin-bottom: 0;
  max-width: 100%;
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<button
  class="circuit-0"
>
  <div
    class="circuit-1"
  >
    <div
      class="circuit-2"
    >
      <p
        class="circuit-3"
      >
        Second item
      </p>
    </div>
  </div>
</button>
`;

exports[`ListItemGroup styles should render the inset variant ListItemGroup by default 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.circuit-1 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  margin: 0 16px;
}

.circuit-2 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  min-width: 0;
  margin-bottom: 8px;
}

.circuit-3 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 14px;
  line-height: 20px;
  margin-bottom: 0;
  max-width: 100%;
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.circuit-4 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 2px solid #E6E6E6;
  border-radius: 16px;
}

.circuit-5 {
  list-style: none;
}

.circuit-5:not(:first-of-type)>*>div:last-of-type {
  position: relative;
}

.circuit-5:not(:first-of-type)>*>div:last-of-type:before {
  content: '';
  position: absolute;
  top: -12px;
  left: 0;
  right: -16px;
  border-top: 1px solid #E6E6E6;
}

.circuit-6 {
  background-color: #FFF;
  color: #1A1A1A;
  border: 2px solid #E6E6E6;
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  margin: 0;
  width: 100%;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  border: none;
  border-radius: calc(16px - 2px);
}

.circuit-6:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-6:focus::-moz-focus-inner {
  border: 0;
}

.circuit-6:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-6:focus {
  border-color: transparent;
  z-index: 2;
}

.circuit-6:focus:not(:focus-visible) {
  border-color: #E6E6E6;
  z-index: auto;
}

.circuit-6:disabled,
.circuit-6[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-7 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
}

.circuit-8 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
}

.circuit-9 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 16px;
  line-height: 24px;
  margin-bottom: 0;
  max-width: 100%;
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<div
  class="circuit-0"
>
  <div
    class="circuit-1"
  >
    <div
      class="circuit-2"
    >
      <h4
        class="circuit-3"
      >
        Group label
      </h4>
    </div>
  </div>
  <ul
    class="circuit-4"
  >
    <li
      class="circuit-5"
    >
      <div
        class="circuit-6"
      >
        <div
          class="circuit-7"
        >
          <div
            class="circuit-8"
          >
            <p
              class="circuit-9"
            >
              First item
            </p>
          </div>
        </div>
      </div>
    </li>
    <li
      class="circuit-5"
    >
      <div
        class="circuit-6"
      >
        <div
          class="circuit-7"
        >
          <div
            class="circuit-8"
          >
            <p
              class="circuit-9"
            >
              Second item
            </p>
          </div>
        </div>
      </div>
    </li>
    <li
      class="circuit-5"
    >
      <div
        class="circuit-6"
      >
        <div
          class="circuit-7"
        >
          <div
            class="circuit-8"
          >
            <p
              class="circuit-9"
            >
              Third item
            </p>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`ListItemGroup styles should render the selected item in a ListItemGroup with interactive items 1`] = `
.circuit-0 {
  background-color: #FFF;
  color: #1A1A1A;
  border: 2px solid #E6E6E6;
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  margin: 0;
  width: 100%;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  cursor: pointer;
  background-color: #F0F6FF;
  border: none;
  border-radius: calc(16px - 2px);
}

.circuit-0:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-0:focus {
  border-color: transparent;
  z-index: 2;
}

.circuit-0:focus:not(:focus-visible) {
  border-color: #E6E6E6;
  z-index: auto;
}

.circuit-0:disabled,
.circuit-0[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-0:hover {
  background-color: #F5F5F5;
}

.circuit-0:active {
  background-color: #E6E6E6;
  border-color: #E6E6E6;
}

.circuit-0:hover,
.circuit-0:active {
  background-color: #F0F6FF;
}

.circuit-0:after {
  content: '';
  position: absolute;
  top: -2px;
  bottom: -2px;
  left: -2px;
  right: -2px;
  border: 2px solid #3063E9;
  border-radius: 16px;
  z-index: 1;
  pointer-events: none;
}

.circuit-1 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
}

.circuit-2 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
}

.circuit-3 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 16px;
  line-height: 24px;
  margin-bottom: 0;
  max-width: 100%;
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<button
  aria-pressed="true"
  class="circuit-0"
>
  <div
    class="circuit-1"
  >
    <div
      class="circuit-2"
    >
      <p
        class="circuit-3"
      >
        First item
      </p>
    </div>
  </div>
</button>
`;

exports[`ListItemGroup styles should render the selected item in a plain ListItemGroup with interactive items 1`] = `
.circuit-0 {
  background-color: #FFF;
  color: #1A1A1A;
  border: 2px solid #E6E6E6;
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  margin: 0;
  width: 100%;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  cursor: pointer;
  background-color: #F0F6FF;
  border: none;
  border-radius: calc(16px - 2px);
}

.circuit-0:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-0:focus {
  border-color: transparent;
  z-index: 2;
}

.circuit-0:focus:not(:focus-visible) {
  border-color: #E6E6E6;
  z-index: auto;
}

.circuit-0:disabled,
.circuit-0[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-0:hover {
  background-color: #F5F5F5;
}

.circuit-0:active {
  background-color: #E6E6E6;
  border-color: #E6E6E6;
}

.circuit-0:hover,
.circuit-0:active {
  background-color: #F0F6FF;
}

.circuit-0:after {
  content: '';
  position: absolute;
  top: -2px;
  bottom: -2px;
  left: -2px;
  right: -2px;
  border: 2px solid #3063E9;
  border-radius: 16px;
  z-index: 1;
  pointer-events: none;
}

.circuit-0:after {
  top: -1px;
  bottom: -1px;
  left: 0;
  right: 0;
}

.circuit-1 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
}

.circuit-2 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
}

.circuit-3 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 16px;
  line-height: 24px;
  margin-bottom: 0;
  max-width: 100%;
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<button
  aria-pressed="true"
  class="circuit-0"
>
  <div
    class="circuit-1"
  >
    <div
      class="circuit-2"
    >
      <p
        class="circuit-3"
      >
        First item
      </p>
    </div>
  </div>
</button>
`;
